--- a/pepnovo+/20120423/Dockerfile
+++ b/pepnovo+/20120423/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         PepNovo+
-# Software Version: 20120423
-# Description:      de novo sequencing of low precision MS/MS data
-# Website:          http://proteomics.ucsd.edu/Software/PepNovo/
-# Tags:             Proteomics
-# Provides:         PepNov+ 20120423|dos2unix
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/pepnovo 20120423/.
-# Pull Cmd:         docker pull biodckr/pepnovo
-# Run Cmd:          docker run --rm biodckr/pepnovo PepNovo_bin
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="2"
+LABEL software="PepNovo+"
+LABEL software.version="20120423"
+LABEL description="de novo sequencing of low precision MS/MS data"
+LABEL website="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL documentation="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL license="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER root
 
@@ -45,9 +41,3 @@ ENV PATH /home/biodocker/bin:$PATH
 USER biodocker
 
 WORKDIR /data/
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
