--- a/peptideprophet/201510131012/Dockerfile
+++ b/peptideprophet/201510131012/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         PeptideProphet
-# Software Version: 201510131012
-# Description:      Peptide assignment statistics and validation
-# Website:          http://peptideprophet.sourceforge.net/
-# Tags:             Proteomics
-# Provides:         PeptideProphet 201510131012
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build -t biodckr/PeptideProphet 201510131012/.
-# Pull Cmd:         docker pull biodckr/PeptideProphet
-# Run Cmd:          docker run biodckr/PeptideProphet PeptideProphet
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to biodckr/biodocker
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="1"
+LABEL software="PeptideProphet"
+LABEL software.version="201510131012"
+LABEL description="Peptide assignment statistics and validation"
+LABEL website="http://peptideprophet.sourceforge.net/"
+LABEL documentation="http://peptideprophet.sourceforge.net/"
+LABEL license="http://peptideprophet.sourceforge.net/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
 
@@ -33,8 +29,4 @@ ENV PATH /home/biodocker/bin:$PATH
 
 WORKDIR /data/
 
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+CMD ["PeptideProphet"]
